<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="5dp"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/queryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/queryPrompt"
            android:ems="10" >
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tagPrompt"
            android:inputType="text"
        	android:imeOptions="actionDone"
        	android:layout_gravity="center_vertical"
            android:ems="10" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_gravity="center_vertical"
        	android:text="@string/save"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@color/light_orange">
        
        <TextView 
            android:layout_height="wrap_content"
            android:id="@+id/taggedSearchesTextView"
            android:text="@string/taggedSearches"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_span="2"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="5dp"></TextView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:background="@color/light_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1">
        
        <ScrollView 
            android:id="@+id/queryScrollView"
            android:layout_width="match_parent"
            android:layout_span="2"
            android:padding="5dp">
            <TableLayout android:id="@+id/queryTableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:stretchColumns="*"></TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/clearTagsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_span="2"
            android:text="@string/clearTags" >

        </Button>
        
    </TableRow>

</TableLayout>
